--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -7,11 +7,19 @@
   cursor: pointer;
   margin-bottom: -3.5px;
 }
+.SingleColorPalette .ColorBox {
+  height: 50%;
+}
+.ColorBox.go-back {
+  background: black;
+}
+
 .ColorBox:hover .copy-button {
   opacity: 1;
   transition: 0.5s;
 }
-.copy-button {
+.copy-button,
+.back-button {
   width: 100px;
   height: 30px;
   position: absolute;
@@ -28,8 +36,10 @@
   color: white;
   text-transform: uppercase;
   border: none;
-  opacity: 0;
   cursor: pointer;
+}
+.copy-button {
+  opacity: 0;
 }
 .box-content {
   position: absolute;
